...
        {i18n.t("search.searchTitle")}
      </Text>
      <SearchBar
        placeholder={i18n.t("search.searchPlaceholder")}
        onChangeText={setInput}
        value={input}
        testID="search-location-field"
      />

      {isLoading && <ActivityIndicator size={"large"} color={"#F0F0F0"} />}
      {error && (
        <Text className="text-center text-red-500 text-lg mt-4">
          {i18n.t("search.fetchError")}
...
