...
const CityCard = ({
  item,
  weather,
  isLoading,
  error,
  index,
  testID = "search-result-item",
}: CityCardProps) => {
  const { name, state, country } = item;

  const setWeatherSource = useSetAtom(weatherSourceAtom);

  const setLocation = useSetAtom(userLocationAtom);
...
